# teacher_assistant

./: .gitignore  README.md  pyproject.toml
teacher_assistant/: db.sqlite3  manage.py
teacher_assistant/lessons/: admin.py  models.py  urls.py  views.py
teacher_assistant/lessons/migrations/: 0001_initial.py
teacher_assistant/lessons/templates/lessons/: index.html
teacher_assistant/teacher_assistant/: asgi.py  backup_settings.py  settings.py  urls.py  wsgi.py
teacher_assistant/teacher_assistant/settings/: base.py
teacher_assistant/templates/: base.html  index.html
teacher_assistant/templates/components/: navbar.html
teacher_assistant/user/: admin.py  models.py  urls.py  views.py
teacher_assistant/user/management/commands/: q.py
teacher_assistant/user/migrations/: 0001_initial.py  0002_alter_student_options_alter_teacher_options.py  0002_rename_teacher_info_student_teachers.py  0003_rename_teacher_info_student_teachers.py  0003_rename_user_teacher_teacher.py  0004_rename_user_student_student.py  0005_rename_student_student_user_and_more.py  0006_alter_student_teachers.py
teacher_assistant/user/templates/: base.html
teacher_assistant/user/templates/user/: home.html  index.html  user_detail.html
teacher_assistant/user/tests/: factories.py
